# Panda-Brain

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.cursor/skills/panda-brain-dev/: SKILL.md
src/panda_brain/: __init__.py  config.py  main.py
src/panda_brain/agents/bilibili/: __init__.py  agent.py  test_agent.py  test_danmaku_full.py
src/panda_brain/agents/bilibili/tools/: __init__.py  bangumi.py  comment.py  danmaku.py  search.py
src/panda_brain/agents/bilibili/tools/danmaku/: __init__.py  tools.py
src/panda_brain/agents/bilibili/tools/danmaku/_internal/: content.py  density.py  segment.py  utils.py
src/panda_brain/agents/coder/: __init__.py  agent.py  tools.py
src/panda_brain/agents/network/: __init__.py  agent.py  tools.py
src/panda_brain/orchestrator/: __init__.py  agent.py  tools.py
