[project]
name = "panda-brain"
version = "0.1.0"
description = "Multi-agent AI system powered by Pydantic AI and Ollama"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai",
    "pydantic-settings",
]

[project.scripts]
panda-brain = "panda_brain.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/panda_brain"]
